[package]
name = "knapsack"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "knapsack"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.14.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
